--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <nav>
                 <h2>Main Navigation</h2>
                 <ul>
-                    <li><a href=""></a>What we do</li>
-                    <li><a href=""></a>Become a hauler</li>
-                    <li><a href=""></a>Services</li>
+                    <li><a href="">What we do</a></li>
+                    <li><a href="">Become a hauler</a></li>
+                    <li><a href="">Services</a></li>
                 </ul>
             </nav>
         </div>
