banner image  positioning

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Junk Removal Source</title>
 </head>
+
 <body>
     <header>
         <div class="wrapper">
@@ -25,15 +26,16 @@
     <!-- Start home pagecontent -->
     <div id="main-banner">
         <img src="https://via.placeholder.com/1200x600" alt="Welcome To Junk Removal Source">
-        <h4>Compare lowest prices from local junk removal companies</h4>
-        <h3>Get a Free Quote Fast!</h3>
-        <h4>Get more info just tell us what you need to remove</h4>
-        <form action="">
-            <label for="zip">Zip Code or City Search</label>
-            <input type="text" name="zip" id="zip">
-            <button>Search</button>
-        </form>
-
+        <div id="inner-content">
+            <h4>Compare lowest prices from local junk removal companies</h4>
+            <h3>Get a Free Quote Fast!</h3>
+            <h4>Get more info just tell us what you need to remove</h4>
+            <form action="">
+                <label for="zip">Zip Code or City Search</label>
+                <input type="text" name="zip" id="zip">
+                <button>Search</button>
+            </form>
+        </div>
     </div>
     
     <div class="wrapper">
@@ -116,6 +118,7 @@
     </div>
 
     <!-- End homepage content -->
+
     <footer>
         <div class="wrapper">
             <h2>Service Areas</h2>
