banner styles and image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- Start home pagecontent -->
     <div id="main-banner">
-        <img src="https://via.placeholder.com/1200x600" alt="Welcome To Junk Removal Source">
+        <img src="images/banner-image.jpg" alt="Welcome To Junk Removal Source">
         <div id="inner-content">
             <h4>Compare lowest prices from local junk removal companies</h4>
             <h3>Get a Free Quote Fast!</h3>
