--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
 </head>
 
 <body>
-    <header>
-        <div class="wrapper">
-            <h1 class="logo">Junk Removal <span class="market">Source</span></h1>
-            <nav>
-                <h2>Main Navigation</h2>
-                <ul>
-                    <li><a href="">What we do</a></li>
-                    <li><a href="">Become a hauler</a></li>
-                    <li><a href="">Services</a></li>
-                </ul>
-            </nav>
-        </div>
+    <header class="header">
+        <a href="" class="logo">Junk Removal <span class="market">Source</span></a>
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu">
+            <li><a href="#wedo">What we do</a></li>
+            <li><a href="#hauler">Become a hauler</a></li>
+            <li><a href="#services">Services</a></li>
+        </ul>
     </header>
-
     <!-- Start home pagecontent -->
     <div id="main-banner">
         <img src="images/banner-image.jpg" alt="Welcome To Junk Removal Source">
@@ -30,11 +26,8 @@
             <h4>Compare lowest prices from local junk removal companies</h4>
             <h3>Get a Free Quote Fast!</h3>
             <h4>Get more info just tell us what you need to remove</h4>
-            <form action="">
-                <label for="zip">Zip Code or City Search</label>
-                <input type="text" name="zip" id="zip">
-                <button>Search</button>
-            </form>
+                <button>Get a Free Quote</button>
+
         </div>
     </div>
     
