bootstrapped the nav and the banner

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+  
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
     <title>Junk Removal Source</title>
 </head>
 
@@ -35,13 +36,13 @@
         </nav>
     </header>
     <!-- Start home pagecontent -->
-    <div id="main-banner" class="jumbotron p-0 position-relative ">
+    <div id="main-banner" class="p-0 position-relative ">
         <img src="images/banner-image.jpg" class="jumbotronImage " alt="Welcome To Junk Removal Source">
         <div id="inner-content" class="position-absolute text-center">
-            <h4 class="d-none d-sm-block">Compare lowest prices from local junk removal companies</h4>
-            <h3 class="d-none d-sm-block">Get a Free Quote Fast!</h3>
-            <h4>Get more info just tell us what you need to remove</h4>
-            <a href="#" class="btn btn-success my-3">Get a Free Quote</a>
+            <h4 class=" mb-4 display-4">Compare lowest prices from local junk removal companies</h4>
+            <h3 class="d-none d-md-block mb-4 display-3">Get a Free Quote Fast!</h3>
+            <h4 class="d-none d-sm-block display-4">Get more info just tell us what you need to remove</h4>
+            <a id="get-quote-banner" href="#" class="btn btn-success my-4 px-24 py-3">Get a Free Quote</a>
 
         </div>
     </div>
