--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             </ul>
             <ul>
                 <li><a href="">New Jersey</a></li>
-                <li>&copy;2019</li>
+                <li>&copy;2019 Pito is a bitch</li>
             </ul>
         </div>
 
