added images need CTA buttons in all cards

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <div class="container">
             <div class="row card-deck mb-3 ">
                 <div class="col-md-4 mb-3">
-                    <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="Junk Removal">
+                    <div class="card h-100 service-card">
+                        <img src="images/home-junkremoval.jpg" class="card-img-top" alt="Junk Removal">
                         <div class="card-body ">
                         <h2 class="card-title">Junk Removal</h2>
                         <p class="card-text">Junk Removal... Its what we do. We can remove any junk you no longer want really fast. Our fast courteus team members are true professionals in removing junk</p>
@@ -90,8 +90,8 @@
                 </div>
 
                 <div class="col-md-4 mb-3">
-                    <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="Backyard cleanup">
+                    <div class="card h-100 service-card">
+                        <img src="images/home-backyard.jpg" class="card-img-top" alt="Backyard cleanup">
                         <div class="card-body">
                         <h2 class="card-title">Backyard Cleanup</h2>
                         <p class="card-text">From just a few branches to complete deck or shed removal. If its in your back yard we can get rid of it. Yard furniture, hot tubs and more. We are expert bakcyard cleanout pros. See how.</p>
@@ -100,8 +100,8 @@
                 </div>
 
                 <div class="col-md-4 mb-3">
-                    <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="Construction Site Cleanup">
+                    <div class="card h-100 service-card">
+                        <img src="images/home-construction.jpg" class="card-img-top" alt="Construction Site Cleanup">
                         <div class="card-body">
                         <h2 class="card-title">Construction Site Cleanup</h2>
                         <p class="card-text">Contractors and homeowners can both use a little help getting rid of construction debris left over from renovations or home improvement projects. Construction site clean up is our specialty! Find out more...</p>
@@ -111,8 +111,8 @@
             </div>
             <div class="row card-deck mb-3 ">
                 <div class="col-md-4 mb-3">
-                    <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="Basement cleanup">
+                    <div class="card h-100 service-card">
+                        <img src="images/home-basement.jpg" class="card-img-top" alt="Basement cleanup">
                         <div class="card-body">
                         <h2 class="card-title">Basement Cleanup</h2>
                         <p class="card-text">Basments are usually damp moldy and full of junk. Let us clean up the junk in your basement. There is no need to break a
@@ -123,8 +123,8 @@
                 </div>
 
                 <div class="col-md-4 mb-3">
-                    <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="Garbage removal">
+                    <div class="card h-100 service-card">
+                        <img src="images/home-garbage.jpg" class="card-img-top" alt="Garbage removal">
                         <div class="card-body">
                         <h2 class="card-title">Garbage Removal</h2>
                         <p class="card-text">Rubbish, junk or just trash. We take it all! Even if you find yourself in a situation where the home is filled with
@@ -135,8 +135,8 @@
                 </div>
 
                 <div class="col-md-4 mb-3">
-                    <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="Furniture removal">
+                    <div class="card h-100 service-card">
+                        <img src="images/home-furniture.jpg" class="card-img-top" alt="Furniture removal">
                         <div class="card-body">
                         <h2 class="card-title">Furniture Removal</h2>
                         <p class="card-text">That old sofa full of holes? Do you have furniture you can't even give away for free? Power Cleanouts removes any furniture regardless of condition. Free quotes for furniture removal. Just click below.</p>
@@ -146,8 +146,8 @@
             </div>
             <div class="row card-deck mb-3">
                 <div class="col-md-4 mb-3">
-                    <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="Garage cleanout">
+                    <div class="card h-100 service-card">
+                        <img src="images/home-garage1.jpg" class="card-img-top" alt="Garage cleanout">
                         <div class="card-body">
                         <h2 class="card-title">Garage Cleanout</h2>
                         <p class="card-text">If you don't have space to park your car its time for a garage cleanout. Garage cleanout professionals are just a click away. Find out how! </p>
@@ -156,8 +156,8 @@
                 </div>
 
                 <div class="col-md-4 mb-3">
-                    <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="Appliance removal">
+                    <div class="card h-100 service-card">
+                        <img src="images/home-appliance1.jpg" class="card-img-top" alt="Appliance removal">
                         <div class="card-body">
                         <h2 class="card-title">Appliance Removal</h2>
                         <p class="card-text"> We can take all appliances. Power Cleanouts removes stoves, refrigerators, washers dryers and much more. Get more info by clicking the link below!</p>
@@ -166,8 +166,8 @@
                 </div>
 
                 <div class="col-md-4 mb-3">
-                    <div class="card h-100">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="commercial office disassembly">
+                    <div class="card h-100 service-card">
+                        <img src="images/home-office1.jpg" class="card-img-top" alt="commercial office disassembly">
                         <div class="card-body">
                         <h2 class="card-title">Commercial Office Disassembly</h2>
                         <p class="card-text">We take apart and remove cubicles, furniture, and obsolete equipment. We remove printers, fax machines, old monitors, old computers and much more. Special</p>
