--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    
             <section >
                 <h2 class="offscreen">Get a Quote or Get more Business</h2>
-                <div class="row mt-5">
+                <div class="row mt-5 mb-3">
                     
                         <div class="quote card custom-card col-md-6">
                             <div class="card-body">
@@ -73,10 +73,10 @@
     <section id="first-pattern"class="pb-3">
 
 
-        <div class="service-gradient py-5 mb-3">
+        <div class="service-gradient py-5">
             <h2 class="services-display my-5">Our Services</h2>
         </div>
-        <!-- <div class="container"> -->
+
             <div class="row card-deck mb-3 ">
                 <div class="col-md-6 col-xl-4 mb-3">
                     <div class="card h-100 service-card">
@@ -182,8 +182,6 @@
                     </div>
                 </div>
             </div>
-        
-        <!-- </div> -->
 
     </section>
 
