changed display size for SERVICES

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
         <div class="service-gradient py-5">
-            <h2 class="services-display my-5">Our Services</h2>
+            <h2 class="services-display display-4 πmy-5">Our Services</h2>
         </div>
 
             <div class="row card-deck mb-3 ">
